archive/apps/adguard/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ad2
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ad2.joejad.com`)
      kind: Rule
      services:
        - name: ad2
          port: 3000
      middlewares:
        - name: default-headers
  tls:
    secretName: local-joejad-tls
